--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 	<title>YouTube</title>
 </head>
 
@@ -48,7 +50,158 @@
 			<img src="img/avatar.jpg" alt="UserFoto" class="user_img">
 		</a>
 	</header>
+	<div class="container">
+		<aside class="sidbar">
+			<nav class="nav">
 
+				<ul class="nav_menu">
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#home"></use>
+							</svg>
+							<span class="nav_text">Home</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#trending"></use>
+							</svg>
+							<span class="nav_text">Trending</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#subscriptions"></use>
+							</svg>
+							<span class="nav_text">Subscriptions</span>
+						</a>
+					</li>
+				</ul>
+
+				<ul class="nav_menu">
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#library"></use>
+							</svg>
+							<span class="nav_text">Library</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#history"></use>
+							</svg>
+							<span class="nav_text">History</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#watchlater"></use>
+							</svg>
+							<span class="nav_text">Watch later</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#favourites"></use>
+							</svg>
+							<span class="nav_text">Favourites</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#likedvideos"></use>
+							</svg>
+							<span class="nav_text">Liked videos</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#music"></use>
+							</svg>
+							<span class="nav_text">Music</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#games"></use>
+							</svg>
+							<span class="nav_text">Games</span>
+						</a>
+					</li>
+					<li class="nav_item">
+						<a href="#" class="nav_link">
+							<svg class="nav_icon" width="20" height="19">
+								<use xlink:href="../img/icons.svg#chevron_down"></use>
+							</svg>
+							<span class="nav_text">Show more</span>
+						</a>
+					</li>
+				</ul>
+			</nav>
+			<h2 class="nav_title">Subscriptions</h2>
+
+			<ul class="nav_menu">
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<img src="img/ava_1.jpg" alt="" class="nav_img">
+						<span class="nav_text">Gussie Singleton</span>
+					</a>
+				</li>
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<img src="img/ava_2.jpg" alt="" class="nav_img">
+						<span class="nav_text">Nora Francis</span>
+					</a>
+				</li>
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<img src="img/ava_3.jpg" alt="" class="nav_img">
+						<span class="nav_text">Belle Briggs</span>
+					</a>
+				</li>
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<img src="img/ava_4.jpg" alt="" class="nav_img">
+						<span class="nav_text">Eunice Cortez</span>
+					</a>
+				</li>
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<img src="img/ava_5.jpg" alt="" class="nav_img">
+						<span class="nav_text">Emma Hanson</span>
+					</a>
+				</li>
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<img src="img/ava_6.jpg" alt="" class="nav_img">
+						<span class="nav_text">Leah Berry</span>
+					</a>
+				</li>
+			</ul>
+
+			<ul class="nav_menu">
+				<li class="nav_item">
+					<a href="#" class="nav_link">
+						<svg class="nav_icon" width="20" height="19">
+							<use xlink:href="../img/icons.svg#settings"></use>
+						</svg>
+						<span class="nav_text">Settings</span>
+					</a>
+				</li>
+			</ul>
+
+		</aside>
+	</div>
 </body>
 
 </html>
